test/typechecker.d/invalid/fns7.souc.bad
n: Integer = 5

f(n: Char): Integer = do
	return n
